# mono2tg

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
