[tool.pdm]

[project]
name = "mono2tg"
version = "0.0.0"
description = ""
authors = [
    {name = "Arwichok", email = "me@arwi.dev"},
]
dependencies = [
    "fastapi>=0.93.0",
    "uvicorn>=0.21.0",
    "furl>=2.1.3",
    "environs>=9.5.0",
    "httpx>=0.23.3",
    "aiogram>=3.0.0b7",
    "setuptools>=67.6.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
start = {cmd = "uvicorn app.main:app --host 0.0.0.0 --reload"}